--- a/web-app/plain_html/home_page.html
+++ b/web-app/plain_html/home_page.html
@@ -3,14 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Untitled Document</title>
-<script src="../../SpryAssets/SpryTabbedPanels.js" type="text/javascript"></script>
-<link href="../../SpryAssets/SpryTabbedPanels.css" rel="stylesheet" type="text/css" />
+<script src="../js/SpryAssets/SpryTabbedPanels.js" type="text/javascript"></script>
+<link href="../js/SpryAssets/SpryTabbedPanels.css" rel="stylesheet" type="text/css" />
+<link href="../css/main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<p>Loan Management &amp; Administration</p>
-<p>Select an action or activity from the tabs below:</p>
-<div id="TabbedPanels1" class="TabbedPanels">
+<p><h1>Loan Management &amp; Administration</h1></p>
+<br />
+<div id="MainNavigationTabbedPannel" class="TabbedPanels">
   <ul class="TabbedPanelsTabGroup">
     <li class="TabbedPanelsTab" tabindex="0">Account Mgr</li>
     <li class="TabbedPanelsTab" tabindex="0">Loans</li>
@@ -18,16 +19,16 @@
 </ul>
   <div class="TabbedPanelsContentGroup">
     <div class="TabbedPanelsContent">
-      <p>Account Manager</p>
-      <p>&nbsp;</p>
+      <p class="menuButton">Account Manager</p>
+      <p>Select Account Search Criteria And Click Search</p>
     </div>
-    <div class="TabbedPanelsContent">Content 2</div>
+    <div class="TabbedPanelsContent">Loan Information</div>
     <div class="TabbedPanelsContent">Content 3</div>
 </div>
 </div>
 <p>&nbsp;</p>
 <script type="text/javascript">
-var TabbedPanels1 = new Spry.Widget.TabbedPanels("TabbedPanels1");
+var TabbedPanels1 = new Spry.Widget.TabbedPanels("MainNavigationTabbedPannel");
 </script>
 </body>
 </html>
